# computah

./: .gitignore  ;q  CMakeLists.txt  LICENSE  README.md  build.sh  compile_commands.json  mksunxiboot
boot/: boot.S  boot.ld  loader.c
common/: CMakeLists.txt  debug.h  delay.c  delay.h  types.h
common/lib/: mmc.c  mmc.h  sd_mmc.c  sd_mmc.h  uart.c  uart.h
common/reg/: ccu.h  regs_base.h  sd_mmc.h
common/reg/uart/: uart.h  uart_virt.h
kernel/: kernel.S  kernel.c  kernel.ld  kernel_uart.h
util/: gen_regs.sh  page_extract.py  parse_reg.py
